--- a/popup.html
+++ b/popup.html
@@ -311,6 +311,8 @@
       <button id="saveAiTokenBtn">Save AI Token</button>
       <div id="aiTokenStatus" class="status" style="display: none;"></div>
       <div class="info">
+        <a href="https://help.aliyun.com/zh/model-studio/get-api-key" target="_blank">Create an API key here</a>
+        <br>
         Provider: <code>dashscope.aliyuncs.com</code>
         <br>
         The key will only be stored locally in this browser.
